--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.10.1",
     "axios": "^1.7.8",
     "expo": "~52.0.11",
     "expo-camera": "^16.0.7",
+    "expo-checkbox": "^4.0.0",
     "expo-image-manipulator": "^13.0.5",
     "expo-status-bar": "~2.0.0",
+    "lodash": "^4.17.21",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-tts": "^4.1.1",
+    "expo-speech": "~13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
