--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,26 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "^2.10.1",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/stack": "^7.0.18",
     "axios": "^1.7.8",
     "expo": "~52.0.11",
     "expo-camera": "^16.0.7",
     "expo-checkbox": "^4.0.0",
+    "expo-image": "^2.0.3",
     "expo-image-manipulator": "^13.0.5",
+    "expo-speech": "~13.0.0",
     "expo-status-bar": "~2.0.0",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
     "react-native-tts": "^4.1.1",
-    "expo-speech": "~13.0.0"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
